--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,5 @@
-# ASP.NET
-# Build and test ASP.NET projects.
-# Add steps that publish symbols, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
-
 trigger:
-- main
-
+- master
 
 pool:
   name: newpool
@@ -17,17 +11,20 @@ pool:
 variables:
   buildConfiguration: 'Release'
   solution: '**/*.sln'
-  artifactName: 'Abasibiangakequiz4'
-
+  artifactName: 'mvcmovie'
 
 steps:
+- task: UseDotNet@2
+  inputs:
+   packageType: 'sdk'
+   version: '6.x'
+
 - task: DotNetCoreCLI@2
   displayName: 'Restore NuGet packages'
   inputs:
-    ommand: 'restore'
+    command: 'restore'
     projects: '$(solution)'
     feedsToUse: 'select'
-
 
 - task: DotNetCoreCLI@2
   displayName: 'Build application'
@@ -36,7 +33,6 @@ steps:
     projects: '$(solution)'
     arguments: '--configuration $(buildConfiguration)'
 
-
 - task: DotNetCoreCLI@2
   displayName: 'Publish application'
   inputs:
@@ -44,3 +40,17 @@ steps:
     projects: '**/*.csproj'
     publishWebProjects: false
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(artifactName)'
+
+- task: ArchiveFiles@2
+  displayName: 'Create ZIP file artifact'
+  inputs:
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/$(artifactName)'
+    includeRootFolder: false
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(artifactName).zip'
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish build artifact'
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/$(artifactName).zip'
+    artifactName: 'drop'
+    publishLocation: 'Container'
